XMLtoCSV/objects/unpackaged/objects/Call2_vod__c.object
<CustomObject>
    <fields>
        <fullName>PCYC_MSL_Clinical_Development_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL Initiative Checkbox</description>
        <label>Clinical Development Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_Clinical_Studies_Overview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL Initiative Checkbox</description>
        <label>Clinical Studies Overview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_DOME_Speaker_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL Initiative Checkbox</description>
        <label>DOME Speaker Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_ECOG_Alliance_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECOG/Alliance Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_Flag__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>MSL Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_MCL_Safety_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL Initiative Checkbox</description>
        <label>MCL - Safety Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_OCS_Feasibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL Initiative Checkbox</description>
        <label>OCS Feasibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_PCYC_1115__c</fullName>
        <label>PCYC-1115</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_PCYC_1127__c</fullName>
        <description>Business and Person Call notes for MSL Initiative: PCYC-1127</description>
        <label>PCYC-1127</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_Planned_Saved_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSL Planned Saved Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_Post_Congress_Initiative__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL Initiative Checkbox</description>
        <label>Post Congress Initiative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_REACH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL Initiative Checkbox</description>
        <label>REACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_Support__c</fullName>
        <label>MSL Support</label>
        <picklist>
            <picklistValues>
                <fullName>Payer Presentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_VA_Initiative__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL Initiative Checkbox</description>
        <label>VA Educational Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Managed_Markets_Text__c</fullName>
        <description>For reporting purposes - displays Yes/No instead of True/False or 1/0.</description>
        <formula>IF( PCYC_Managed_Markets__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managed Markets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Managed_Markets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Managed Markets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Medical_Director__c</fullName>
        <description>NAE Attendee Roles</description>
        <label>Medical Director</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Next_Call_Objectives__c</fullName>
        <label>Next Call Objectives</label>
        <picklist>
            <picklistValues>
                <fullName>A-Fib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bleeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Response/MRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diarrhea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finite Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lymphocytosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Notes__c</fullName>
        <description>Free form text area for Biz Dev team to capture meeting notes</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_OCS_Feasibility__c</fullName>
        <description>OCS Feasibility notes on MSL business call page.</description>
        <label>OCS Feasibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_OTD__c</fullName>
        <label>Other Topics Discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Diarrhea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lymphocytosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Del 17 p</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Other_Text__c</fullName>
        <description>For reporting purposes - displays Yes/No instead of True/False or 1/0</description>
        <formula>IF ( PCYC_Other__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Out_of_Office_Program_CE__c</fullName>
        <label>Out-of-Office Program</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Out_of_Office_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out-of-Office Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_PCYC_1127__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL Initiative PCYC-1127</description>
        <label>PCYC-1127</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Payer_presentation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Payer presentation MSL initiative</description>
        <label>Payer Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Payer_presentation_notes__c</fullName>
        <description>Payer presentation MSL notes</description>
        <label>Payer Presentation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Pharm_Manufacturer_Relations__c</fullName>
        <description>NAE Attendee Roles</description>
        <label>Pharmaceutical/Manufacturer Relations</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Pharmacist__c</fullName>
        <description>NAE Attendee Roles</description>
        <label>Pharmacist</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Pharmacy_Director__c</fullName>
        <description>NAE Attendee Roles</description>
        <label>Pharmacy Director</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Pharmacy_Other__c</fullName>
        <description>NAE Attendee Roles</description>
        <label>Pharmacy Other</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Post_Congress_Initiative__c</fullName>
        <description>Call notes for Post Congress Initiative</description>
        <label>Post Congress Initiative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_REACH_2_Notes__c</fullName>
        <description>REACH-2 notes</description>
        <label>REACH-2</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_REACH_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>REACH-2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_REACH__c</fullName>
        <description>REACH notes for MSL business interaction</description>
        <label>REACH</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Research__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Response_to_MIRF_Text__c</fullName>
        <description>For reporting purposes - displays Yes/No instead of True/False or 1/0.</description>
        <formula>IF ( PCYC_Response_to_MIR__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response to MIRF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Response_to_MIRF_or_Unsolicited__c</fullName>
        <description>For reporting purposes</description>
        <formula>IF ( PCYC_Response_to_MIR__c , &quot;Yes&quot;, 
IF ( PCYC_Response_to_Unsolicited_Request__c , &quot;Yes&quot;, 
&quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response to MIRF or Unsolicited Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Response_to_MIR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response to MIRF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Response_to_Unsolicited_Request_Txt__c</fullName>
        <description>For reporting purposes - displays Yes/No instead of True/False or 1/0.</description>
        <formula>IF ( PCYC_Response_to_Unsolicited_Request__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response to Unsolicited Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Response_to_Unsolicited_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response to Unsolicited Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL and CE Interaction Topics</description>
        <label>Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Speaker_Training_CE__c</fullName>
        <label>Speaker Training</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Speaker_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speaker Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Specialty_Pharmacy_Personnel__c</fullName>
        <description>NAE Attendee Roles</description>
        <label>Specialty Pharmacy Personnel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Student__c</fullName>
        <description>NAE Attendee Roles</description>
        <label>Student</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Unsolicited_Questions__c</fullName>
        <description>This field is utilized by the MSL team to track Unsolicited Request questions from the field.</description>
        <label>Unsolicited Questions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_VA_Initiative__c</fullName>
        <description>Call notes for VA Educational Project</description>
        <label>VA Educational Project</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_cGVHD_Project_Translate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>cGVHD Project Translate initiative for MSLs and CEs</description>
        <label>cGVHD Project Translate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Address_Id_vod__c</fullName>
        <description>The Id of the Parent Address that was used when the Call was created; the text value of the Parent_Address_vod field.</description>
        <label>Parent Address Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to address associated with this call. When data loading historical data, this field is not required and it will generally be easier to use the Address text field on call.</description>
        <label>Parent Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Call_Mobile_ID_vod__c</fullName>
        <description>Mobile ID of the parent call object</description>
        <label>Parent Call Mobile ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Call_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this call record is part of a larger group call, this field is used to provide a link to that call.</description>
        <label>Parent Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Calls (Parent Call)</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Call_Notes_vod__c</fullName>
        <description>Free text area to store pre-call notes.  Pre call notes are populated from the next-call notes of that last call that the user did on this account.  So, Next-Call notes become the pre-call notes for the next call by a same user on the same account.</description>
        <label>Pre-Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presentations_vod__c</fullName>
        <description>Comma separated list of presentations for this call.</description>
        <label>Presentations</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Priority_1_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First product to be discussed during the call. This is the suggested priority – actual discussion order can be modified during the call.  Product is loaded from Call Cycle Entry record.</description>
        <label>Product Priority 1</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Priority 1</relationshipLabel>
        <relationshipName>Product_Priority_1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Priority_2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Second product to be discussed during the call. This is the suggested priority – actual discussion order can be modified during the call.  Product is loaded from Call Cycle Entry record.</description>
        <label>Product Priority 2</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Priority 2</relationshipLabel>
        <relationshipName>Product_Priority_2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Priority_3_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Third product to be discussed during the call. This is the suggested priority – actual discussion order can be modified during the call.  Product is loaded from Call Cycle Entry record</description>
        <label>Product Priority 3</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Priority 3</relationshipLabel>
        <relationshipName>Product_Priority_3_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_vod__c</fullName>
        <description>System field used to store metadata about the call report. When data loading, this can be ignored.</description>
        <label>Property</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receipt_Email_vod__c</fullName>
        <description>Email address used when sending an Approved Email Receipt</description>
        <label>Receipt Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Remote_Meeting_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When populated, designates the Call as a Remote Meeting.</description>
        <label>Remote Meeting</label>
        <referenceTo>Remote_Meeting_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark true to if a receipt was requested for a disbursement.</description>
        <label>Request Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation_vod__c</fullName>
        <description>The salutation of the Account signing for a sample</description>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Card_Reason_vod__c</fullName>
        <description>The field is designed to capture the reason a Sample Card was used rather than electronic signature.</description>
        <label>Sample Card Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Laptop Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Card_vod__c</fullName>
        <description>Sample card number if a disbursement was made with a sample card.</description>
        <label>Sample Card #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Send_Card_vod__c</fullName>
        <description>Sample send card number if a disbursement was made with a sample send card.</description>
        <label>Sample Send Card #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_ASSMCA_vod__c</fullName>
        <description>The ASSMCA number corresponding to the ship to address.</description>
        <label>Ship ASSMCA #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_1_vod__c</fullName>
        <description>The Ship Address Line 1 field stores the first line of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_2_vod__c</fullName>
        <description>The Ship Address Line 2 field stores the second line of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CDS_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the CDS registration number for the ship to address.</description>
        <label>Ship CDS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_CDS_vod__c</fullName>
        <description>The CDS registration number for the corresponding state of the ship to address.</description>
        <label>Ship CDS #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_City_vod__c</fullName>
        <description>The Ship City field stores the City of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Country_vod__c</fullName>
        <description>The Ship Country field stores the Country of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_DEA_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the DEA number corresponding to the ship to address.</description>
        <label>Ship DEA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_DEA_vod__c</fullName>
        <description>The DEA number corresponding to the ship to address.</description>
        <label>Ship DEA #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_License_Expiration_Date_vod__c</fullName>
        <description>The Ship License Expiration Date field stores the Physician&apos;s State License Expiration Date that signed for Samples.  This field should not be added to the Page Layout.</description>
        <label>Ship License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_License_Status_vod__c</fullName>
        <description>The Ship License Status field stores the current Status of the Physician&apos;s State License at the time the Signature was captured for Samples.  This field should not be added the page layout.</description>
        <label>Ship License Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_License_vod__c</fullName>
        <description>The Ship License # field stores the State License # for the Physician signing the BRC.</description>
        <label>Ship License #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Location_Id_vod__c</fullName>
        <description>The textual ID of the Child Account value maintained in the Ship_To_Location_vod field.</description>
        <label>Ship Location Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Location_vod__c</fullName>
        <description>The Ship Location field stores the Business Account location for a BRC Sample. This field should not be displayed on the Page Layout.</description>
        <label>Ship Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_State_vod__c</fullName>
        <description>The Ship State field stores the State of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Text_vod__c</fullName>
        <description>The Ship to Address Formula field corresponds to a formatted version of the Ship to Address fields.  This value is leveraged in the case that the referenced Ship to Address has been deleted.  This field should not be added to a Page Layout.</description>
        <formula>Ship_Address_Line_1_vod__c    &amp; IF(LEN(Ship_Address_Line_2_vod__c) &gt; 0,   &quot;, &quot; &amp;  Ship_Address_Line_2_vod__c, &quot;&quot;)  &amp; IF(LEN(Ship_City_vod__c) &gt; 0,   &quot;, &quot; &amp;  Ship_City_vod__c, &quot;&quot;)  &amp; IF(LEN(Ship_State_vod__c) &gt; 0,   &quot;, &quot; &amp;  Ship_State_vod__c, &quot;&quot;)   &amp; IF(LEN(Ship_Zip_vod__c) &gt; 0,   &quot; &quot; &amp;  Ship_Zip_vod__c, &quot;&quot;)</formula>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Ship to Address Lookup field corresponds to the selected Address record where BRC Samples will be shipped.  This field should not be added to a Page Layout.</description>
        <label>Ship To Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Calls (Ship To Address)</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Location_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Ship to Location Lookup field corresponds to the selected Business Account record where BRC Samples will be shipped. This field should not be added to a Page Layout.</description>
        <label>Ship To Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calls (Ship To Location)</relationshipLabel>
        <relationshipName>Calls1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_Zip_4_vod__c</fullName>
        <description>The Ship Zip 4 field stores the Zip Code 4 of the Ship to Address for a BRC Sample. This field should not be displayed on the Page Layout.</description>
        <label>Ship Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Zip_vod__c</fullName>
        <description>The Ship Zip field stores theZip Code/Postal Code of the Ship to Address for a BRC Sample.  This field should not be displayed on the Page Layout.</description>
        <label>Ship Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Date_vod__c</fullName>
        <description>Date and time of the captured signature for a disbursement. This value is copied in to the sample transaction object via a trigger. It is maintained on call header for synchronization purposes.</description>
        <label>Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_Location_Latitude_vod__c</fullName>
        <description>Stores the latitude coordinate of the location where the signature was captured.</description>
        <label>Signature Location Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature_Location_Longitude_vod__c</fullName>
        <description>Stores the longitude coordinate of the location where the signature was captured.</description>
        <label>Signature Location Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature_Page_Display_Name_vod__c</fullName>
        <description>The value of the Account.Signature_Page_Display_Name_vod at the time of Signature Capture.</description>
        <label>Signature Page Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Page_Image_vod__c</fullName>
        <description>The string displayed in the Signature Page Image picklist</description>
        <label>Signature Page Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Timestamp_vod__c</fullName>
        <description>Device up-time in seconds, at the time the signature was captured.</description>
        <label>Signature Timestamp</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature_on_Sync_vod__c</fullName>
        <description>Indicates the presence of a practitioner signature on sync of a saved call to determine ability of practitioner to re-sign for samples with sample limits</description>
        <formula>IF( ISBLANK( Signature_Date_vod__c )  ||  ISNULL( Signature_Date_vod__c ) , &quot;No_vod&quot;, &quot;Yes_vod&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature on Sync</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Encoded signature captured during disbursement.  Encoded using base64. This value is copied in to the sample transaction object via a trigger. It is maintained on call header for synchronization purposes.</description>
        <label>Signature</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Significant_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a significant event.</description>
        <label>Significant Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>State of the Call Address.  This field should not be displayed on the Page Layout..</description>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the call -- Planned, Saved or Submitted. Use the translation workbench to change the display values.  The triggers on call look at this field to see whether the call is locked (submitted). This value is set for the user when the Save or Submit button is pressed.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_vod__c</fullName>
        <description>Subject of the call. This is purely an optional text field with no special processing.</description>
        <label>Subject</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Location_Latitude_vod__c</fullName>
        <description>Stores the latitude coordinate of the location where the submit button is clicked</description>
        <inlineHelpText>Stores the latitude coordinate of the location where the submit button is clicked</inlineHelpText>
        <label>Submit Location Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Location_Longitude_vod__c</fullName>
        <description>Stores the longitude coordinate of the location where the submit button is clicked</description>
        <inlineHelpText>Stores the longitude coordinate of the location where the submit button is clicked</inlineHelpText>
        <label>Submit Location Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Location_Services_Status_vod__c</fullName>
        <description>Indicates the state of location services at the time the submit button was clicked.
Enabled_vod - location services are turned on and the system is able to get the user&apos;s location
Disabled_vod - location services are turned off
No_connection_vod - no network connection</description>
        <label>Submit Location Services Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enabled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_connection_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>